--- a/login page django/registration/templates/home.html
+++ b/login page django/registration/templates/home.html
@@ -24,7 +24,7 @@
     </div>
     <script>
       function redirectToNextPage() {
-        window.location.href =  "http://127.0.0.1:5503/hacky/Monances/pages/Dashboard/dashboard.html" ;
+        window.location.href =  "https://haryiankkumra.github.io/Fintech/hacky/Monances/pages/Dashboard/dashboard.html" ;
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
